// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: PlacementBreakdown matches snapshot with provider data 1`] = `
<PanelSectionTableCollection
  columns={
    Array [
      Object {
        "label": "",
        "sortKey": [Function],
      },
      Object {
        "label": "Inbox",
        "minWidth": "72px",
        "sortKey": "placement.inbox_pct",
      },
      Object {
        "label": "Spam",
        "minWidth": "72px",
        "sortKey": "placement.spam_pct",
      },
      Object {
        "label": "Missing",
        "minWidth": "72px",
        "sortKey": "placement.missing_pct",
      },
    ]
  }
  defaultSortColumn="placement.inbox_pct"
  defaultSortDirection="desc"
  filterBox={false}
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "authentication": Object {
          "dkim_pct": 0,
          "dmarc_pct": 1,
          "spf_pct": 0,
        },
        "mailbox_provider": "dogmail.com",
        "placement": Object {
          "inbox_pct": 0,
          "missing_pct": 1,
          "spam_pct": 0,
        },
        "region": "north america",
        "sending_ip": "101.101",
      },
      Object {
        "authentication": Object {
          "dkim_pct": 0.1,
          "dmarc_pct": 0.1,
          "spf_pct": 0.8,
        },
        "mailbox_provider": "doghouseinbox.com",
        "placement": Object {
          "inbox_pct": 0.8,
          "missing_pct": 0.1,
          "spam_pct": 0.1,
        },
        "region": "europe",
        "sending_ip": "101.102",
      },
    ]
  }
  saveCsv={true}
/>
`;

exports[`Component: PlacementBreakdown renders correctly with no data 1`] = `
<PanelSectionTableCollection
  columns={
    Array [
      Object {
        "label": "",
        "sortKey": [Function],
      },
      Object {
        "label": "Inbox",
        "minWidth": "72px",
        "sortKey": "placement.inbox_pct",
      },
      Object {
        "label": "Spam",
        "minWidth": "72px",
        "sortKey": "placement.spam_pct",
      },
      Object {
        "label": "Missing",
        "minWidth": "72px",
        "sortKey": "placement.missing_pct",
      },
    ]
  }
  defaultSortColumn="placement.inbox_pct"
  defaultSortDirection="desc"
  filterBox={false}
  getRowData={[Function]}
  pagination={true}
  rows={Array []}
  saveCsv={true}
/>
`;
